apps/gateway/src/main/java/org/nbreval/weather_twin/gateway/infrastructure/util/wtal/AggregatorWtalParser.java
// Generated from AggregatorWtal.g4 by ANTLR 4.13.2
package org.nbreval.weather_twin.gateway.infrastructure.util.wtal;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AggregatorWtalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PLUS=1, MINUS=2, MULT=3, DIV=4, AND=5, OR=6, ASSIGN=7, ARROW=8, GREATER_THAN=9, 
		LESS_THAN=10, EQUALS=11, DISTINCT=12, GREATER_OR_EQUALS=13, LESS_OR_EQUALS=14, 
		MOD=15, IN=16, SEMI=17, POW=18, SQRT=19, MAP=20, FILTER=21, ISNULL=22, 
		TERNARY=23, NUMBER=24, POINT=25, COMMA=26, LBRACKET=27, RBRACKET=28, LBRACE=29, 
		RBRACE=30, COLON=31, LPAREN=32, RPAREN=33, SPACE=34, STRING=35, BOOLEAN=36, 
		NULL=37, IDENTIFIER=38;
	public static final int
		RULE_start = 0, RULE_statement = 1, RULE_expression = 2, RULE_atom = 3, 
		RULE_lambda_expression = 4, RULE_json_object = 5, RULE_json_pair = 6, 
		RULE_json_array = 7, RULE_json_value = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "statement", "expression", "atom", "lambda_expression", "json_object", 
			"json_pair", "json_array", "json_value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'='", "'->'", "'>'", 
			"'<'", "'=='", "'!='", "'>='", "'<='", "'%'", "'IN'", "';'", "'POW'", 
			"'SQRT'", "'MAP'", "'FILTER'", "'ISNULL'", "'TERNARY'", null, "'.'", 
			"','", "'['", "']'", "'{'", "'}'", "':'", "'('", "')'", null, null, null, 
			"'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PLUS", "MINUS", "MULT", "DIV", "AND", "OR", "ASSIGN", "ARROW", 
			"GREATER_THAN", "LESS_THAN", "EQUALS", "DISTINCT", "GREATER_OR_EQUALS", 
			"LESS_OR_EQUALS", "MOD", "IN", "SEMI", "POW", "SQRT", "MAP", "FILTER", 
			"ISNULL", "TERNARY", "NUMBER", "POINT", "COMMA", "LBRACKET", "RBRACKET", 
			"LBRACE", "RBRACE", "COLON", "LPAREN", "RPAREN", "SPACE", "STRING", "BOOLEAN", 
			"NULL", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AggregatorWtal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AggregatorWtalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AggregatorWtalParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(19); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(18);
				statement();
				}
				}
				setState(21); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 520395423748L) != 0) );
			setState(23);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignStatementContext extends StatementContext {
		public TerminalNode IDENTIFIER() { return getToken(AggregatorWtalParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(AggregatorWtalParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(AggregatorWtalParser.SEMI, 0); }
		public AssignStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterAssignStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitAssignStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitAssignStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EvalStatementContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(AggregatorWtalParser.SEMI, 0); }
		public EvalStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterEvalStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitEvalStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitEvalStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(33);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new AssignStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(25);
				match(IDENTIFIER);
				setState(26);
				match(ASSIGN);
				setState(27);
				expression(0);
				setState(28);
				match(SEMI);
				}
				break;
			case 2:
				_localctx = new EvalStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(30);
				expression(0);
				setState(31);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FilterFunctionContext extends ExpressionContext {
		public TerminalNode FILTER() { return getToken(AggregatorWtalParser.FILTER, 0); }
		public TerminalNode LPAREN() { return getToken(AggregatorWtalParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(AggregatorWtalParser.COMMA, 0); }
		public Lambda_expressionContext lambda_expression() {
			return getRuleContext(Lambda_expressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AggregatorWtalParser.RPAREN, 0); }
		public FilterFunctionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterFilterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitFilterFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitFilterFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ModContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode MOD() { return getToken(AggregatorWtalParser.MOD, 0); }
		public ModContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterMod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitMod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitMod(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MulDivContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode MULT() { return getToken(AggregatorWtalParser.MULT, 0); }
		public TerminalNode DIV() { return getToken(AggregatorWtalParser.DIV, 0); }
		public MulDivContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterMulDiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitMulDiv(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitMulDiv(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode IN() { return getToken(AggregatorWtalParser.IN, 0); }
		public InContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterIn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitIn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitIn(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class UnaryMinusContext extends ExpressionContext {
		public TerminalNode MINUS() { return getToken(AggregatorWtalParser.MINUS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public UnaryMinusContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterUnaryMinus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitUnaryMinus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitUnaryMinus(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AtomicContext extends ExpressionContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public AtomicContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterAtomic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitAtomic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitAtomic(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MapFunctionContext extends ExpressionContext {
		public TerminalNode MAP() { return getToken(AggregatorWtalParser.MAP, 0); }
		public TerminalNode LPAREN() { return getToken(AggregatorWtalParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(AggregatorWtalParser.COMMA, 0); }
		public Lambda_expressionContext lambda_expression() {
			return getRuleContext(Lambda_expressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AggregatorWtalParser.RPAREN, 0); }
		public MapFunctionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterMapFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitMapFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitMapFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IsNullFunctionContext extends ExpressionContext {
		public TerminalNode ISNULL() { return getToken(AggregatorWtalParser.ISNULL, 0); }
		public TerminalNode LPAREN() { return getToken(AggregatorWtalParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AggregatorWtalParser.RPAREN, 0); }
		public IsNullFunctionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterIsNullFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitIsNullFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitIsNullFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PlusMinusContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(AggregatorWtalParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(AggregatorWtalParser.MINUS, 0); }
		public PlusMinusContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterPlusMinus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitPlusMinus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitPlusMinus(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParenthesisContext extends ExpressionContext {
		public TerminalNode LPAREN() { return getToken(AggregatorWtalParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AggregatorWtalParser.RPAREN, 0); }
		public ParenthesisContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterParenthesis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitParenthesis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitParenthesis(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SqrtFunctionContext extends ExpressionContext {
		public TerminalNode SQRT() { return getToken(AggregatorWtalParser.SQRT, 0); }
		public TerminalNode LPAREN() { return getToken(AggregatorWtalParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AggregatorWtalParser.RPAREN, 0); }
		public SqrtFunctionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterSqrtFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitSqrtFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitSqrtFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AccesorContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode LBRACKET() { return getToken(AggregatorWtalParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(AggregatorWtalParser.RBRACKET, 0); }
		public TerminalNode COLON() { return getToken(AggregatorWtalParser.COLON, 0); }
		public AccesorContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterAccesor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitAccesor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitAccesor(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComparatorsContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode GREATER_THAN() { return getToken(AggregatorWtalParser.GREATER_THAN, 0); }
		public TerminalNode LESS_THAN() { return getToken(AggregatorWtalParser.LESS_THAN, 0); }
		public TerminalNode EQUALS() { return getToken(AggregatorWtalParser.EQUALS, 0); }
		public TerminalNode DISTINCT() { return getToken(AggregatorWtalParser.DISTINCT, 0); }
		public TerminalNode GREATER_OR_EQUALS() { return getToken(AggregatorWtalParser.GREATER_OR_EQUALS, 0); }
		public TerminalNode LESS_OR_EQUALS() { return getToken(AggregatorWtalParser.LESS_OR_EQUALS, 0); }
		public ComparatorsContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterComparators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitComparators(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitComparators(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TernaryFunctionContext extends ExpressionContext {
		public TerminalNode TERNARY() { return getToken(AggregatorWtalParser.TERNARY, 0); }
		public TerminalNode LPAREN() { return getToken(AggregatorWtalParser.LPAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AggregatorWtalParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AggregatorWtalParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(AggregatorWtalParser.RPAREN, 0); }
		public TernaryFunctionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterTernaryFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitTernaryFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitTernaryFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PowFunctionContext extends ExpressionContext {
		public TerminalNode POW() { return getToken(AggregatorWtalParser.POW, 0); }
		public TerminalNode LPAREN() { return getToken(AggregatorWtalParser.LPAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(AggregatorWtalParser.COMMA, 0); }
		public TerminalNode RPAREN() { return getToken(AggregatorWtalParser.RPAREN, 0); }
		public PowFunctionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterPowFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitPowFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitPowFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AndOrContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode AND() { return getToken(AggregatorWtalParser.AND, 0); }
		public TerminalNode OR() { return getToken(AggregatorWtalParser.OR, 0); }
		public AndOrContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).enterAndOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AggregatorWtalListener ) ((AggregatorWtalListener)listener).exitAndOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AggregatorWtalVisitor ) return ((AggregatorWtalVisitor<? extends T>)visitor).visitAndOr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}
